# SoftEng_project

./: .gitignore  Dockerfile  README.MD  manager.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/: main.py
src/app/cases/: manager.py
src/app/cases/api/: __init__.py  cases.py
src/app/cases/managers/: __init__.py  case.py  item.py
src/app/cases/models/: case_items.py  item.py
src/app/user/: crypto.py  manager.py  middleware.py  model.py
src/app/user/api/: user.py
src/app/user/models/: __init__.py  create.py  user.py
src/app/user/schemas/: __init__.py  token.py  user.py  user_register.py
src/app/user/usecases/: __init__.py  register.py  user_login.py
src/core/: __init__.py  config.py  logger_conf.py
src/db/: __init__.py  database.py  exceptions.py  init_db.py  shortcuts.py
src/db/manager/: __init__.py  base_manager.py  shortcuts.py
src/db/models/: __init__.py  base_model.py
src/view/: __init__.py  view.py
src/view/templates/: index.html
tests/: client_test.py  item_test.py  manager_test.py  test_view.py  user_test.py
